Adiciona ponto final na frase 'Junte-se aos concurseiros...'

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
         <div class="container">
             <div class="cta-content">
                 <h2>Pronto para transformar seus estudos?</h2>
-                <p>Junte-se aos concurseiros que já estão usando IA para acelerar sua aprovação</p>
+                <p>Junte-se aos concurseiros que já estão usando IA para acelerar sua aprovação.</p>
                 <button class="btn btn-primary btn-large" onclick="window.location.href='cadastro.html'">
                     Começar Agora - 7 dias grátis
                     <i class="fas fa-arrow-right"></i>
