Corrige paginas de privacidade e termos que ficavam em branco

--- a/privacidade.html
+++ b/privacidade.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Política de Privacidade - IAprovas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-clean.css?v=1.2">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FCHSYJJ7FB"></script>
@@ -27,6 +27,18 @@
     </style>
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="nav-wrapper">
+                <a href="index.html" class="logo-link">
+                    <div class="logo">
+                        <i class="fas fa-book-open"></i>
+                        <span>IAprovas</span>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </header>
     <div class="legal-page">
         <div class="container">
             <div class="legal-content">
@@ -81,7 +93,7 @@
                     <li>Solicitar a portabilidade dos seus dados a outro fornecedor de serviço.</li>
                     <li>Eliminar os dados pessoais tratados com o seu consentimento.</li>
                 </ul>
-                <p>Para exercer seus direitos, entre em contato conosco pelo e-mail: <strong>contato@iaprova.com.br</strong>.</p>
+                <p>Para exercer seus direitos, entre em contato conosco pelo e-mail: <strong>contato@iaprovas.com.br</strong>.</p>
                 
                 <h2>5. Alterações nesta Política</h2>
                 <p>Podemos atualizar nossa Política de Privacidade de tempos em tempos. Notificaremos você sobre quaisquer alterações, publicando a nova política nesta página. Recomendamos que você revise esta página periodicamente.</p>
