--- a/termos.html
+++ b/termos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Termos de Uso - IAprovas</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-clean.css?v=1.2">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-FCHSYJJ7FB"></script>
@@ -27,6 +27,18 @@
     </style>
 </head>
 <body>
+    <header class="header">
+        <div class="container">
+            <div class="nav-wrapper">
+                <a href="index.html" class="logo-link">
+                    <div class="logo">
+                        <i class="fas fa-book-open"></i>
+                        <span>IAprovas</span>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </header>
     <div class="legal-page">
         <div class="container">
             <div class="legal-content">
