Corrige link dos documentos da seção material de estudo

--- a/material-de-estudo.html
+++ b/material-de-estudo.html
@@ -71,17 +71,17 @@
                         <div class="download-item">
                             <i class="fas fa-file-pdf"></i>
                             <span>Guia Definitivo de Aprovação em Concursos</span>
-                            <a href="Guiadefinitivodeaprovacaoemconcursos_IAprovas.pdf" download="Guiadefinitivodeaprovacaoemconcursos_IAprovas.pdf" class="btn btn-primary">Baixar</a>
+                            <a href="outros_documentos/Guiadefinitivodeaprovacaoemconcursos_IAprovas.pdf" download="Guiadefinitivodeaprovacaoemconcursos_IAprovas.pdf" class="btn btn-primary">Baixar</a>
                         </div>
                         <div class="download-item">
                             <i class="fas fa-file-pdf"></i>
                             <span>6 Etapas para Planejar seu Estudo</span>
-                            <a href="6_etapas_planejamento.pdf" download="6_etapas_planejamento.pdf" class="btn btn-primary">Baixar</a>
+                            <a href="outros_documentos/6_etapas_planejamento.pdf" download="6_etapas_planejamento.pdf" class="btn btn-primary">Baixar</a>
                         </div>
                         <div class="download-item">
                             <i class="fas fa-file-pdf"></i>
                             <span>8 Passos para uma Redação Nota Máxima</span>
-                            <a href="8_passos_redacao.pdf" download="8_passos_redacao.pdf" class="btn btn-primary">Baixar</a>
+                            <a href="outros_documentos/8_passos_redacao.pdf" download="8_passos_redacao.pdf" class="btn btn-primary">Baixar</a>
                         </div>
                     </div>
                 </section>
