Modifica link de contato na página cancelado.html, modifica código para q ue o limite de uso de flashcards esteja dentro do plan-limits, acrescenta modal sobre a necessidade de apertar enter ao acrescentar tópicos especificos na geracao de exercicios, reseta formulário após geracao de exercicios e acrescenta abertura de cronograma ao utilizar o filtro da seção de métricas do cronog rama

--- a/exercicios.html
+++ b/exercicios.html
@@ -89,7 +89,7 @@
                         <input type="text" id="exercicio-topico" placeholder="Digite ou selecione os tópicos desejados...">
                         <div id="topicos-selecionados" class="topicos-tags" style="display: none; margin-top: 8px;"></div>
                         <small style="color: #6b7280; font-size: 0.875rem; margin-top: 4px; display: block;">
-                            <i class="fas fa-info-circle"></i> Você pode selecionar múltiplos tópicos para uma sessão mais abrangente
+                            <i class="fas fa-info-circle"></i> Digite um tópico e pressione <strong>Enter</strong> para adicionar à lista. Você pode adicionar vários.
                         </small>
                     </div>
                     
